[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/oak_woods_v1.0/Wooden_Platform.png" type="Texture" id=1]
[ext_resource path="res://Scenes/delete/Node2D.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shake"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.03, 0.08, 0.14, 0.2, 0.25, 0.32, 0.38, 0.42, 0.46, 0.53, 0.58, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.5, 0 ), Vector2( -1, 0 ), Vector2( -0.5, 0 ), Vector2( 0, 0 ), Vector2( -0.5, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 0.5, 0 ), Vector2( 0, 0 ), Vector2( -1, 0 ), Vector2( 0, 0 ) ]
}

[node name="FallingPlatform" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
motion/sync_to_physics = true

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
shape = SubResource( 1 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
anims/RESET = SubResource( 2 )
anims/Shake = SubResource( 3 )

[node name="ResetTimer" type="Timer" parent="KinematicBody2D"]
one_shot = true

[connection signal="animation_finished" from="KinematicBody2D/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="KinematicBody2D/ResetTimer" to="." method="_on_Timer_timeout"]
